--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -5,11 +5,29 @@
 }
 
 .container {
+  position: relative;
+
   height: 100vh;
   width: 100vw;
   padding: 135px 44px 10px;
 
   background: rgba(41, 28, 125, 0.9);
+
+  z-index: 10;
+
+  .lendme-logo {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    z-index: 2;
+    img {
+      position: absolute;
+      top: 38px;
+
+      z-index: 1;
+    }
+  }
 
   &__element {
     height: 510px;
@@ -21,10 +39,13 @@
     background-color: #fff;
 
     .artwork {
+      position: relative;
       display: flex;
       justify-content: center;
       margin-bottom: 24px;
       img {
+        position: relative;
+        top: 0;
       }
     }
 
@@ -59,13 +80,6 @@
         padding: 0 17px 0 5px;
 
         font-size: 18px;
-
-        // input[type="radio"] + label:before,
-        // input[type="radio"] + label:before {
-        /* unchecked checkbox */
-        /* content: "\f096"; - Default icon */
-        // content: "\25cb";
-        // }
 
         .option-input {
           appearance: none;
