--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,10 +7,29 @@
 }
 
 .container {
+  position: relative;
   height: 100vh;
   width: 100vw;
   padding: 135px 44px 10px;
   background: rgba(41, 28, 125, 0.9);
+  z-index: 10;
+}
+
+.container .lendme-logo {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 2;
+}
+
+.container .lendme-logo img {
+  position: absolute;
+  top: 38px;
+  z-index: 1;
 }
 
 .container__element {
@@ -22,6 +41,7 @@
 }
 
 .container__element .artwork {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -29,6 +49,11 @@
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 24px;
+}
+
+.container__element .artwork img {
+  position: relative;
+  top: 0;
 }
 
 .container__element-text {
@@ -65,8 +90,6 @@
   margin-bottom: 22px;
   padding: 0 17px 0 5px;
   font-size: 18px;
-  /* unchecked checkbox */
-  /* content: "\f096"; - Default icon */
 }
 
 .container__element-select .each .option-input {
